--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "lite-server": "lite-server"
   },
   "repository": {
@@ -19,10 +20,18 @@
   },
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^4.0.3",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "workbox-webpack-plugin": "^5.1.2"
   }
 }
